--- a/my-app/public/detalles.css
+++ b/my-app/public/detalles.css
@@ -134,23 +134,66 @@ a{
     font-size: small;
 }
 
-.favorito-btn {
-    margin-top: 0.5rem;
-    background-color: #ff4081;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
-  }
+.favoritos-btn {
+  margin-top: 0.5rem;
+  background-color: #ff4081;
+  color: #fff;
+  border: none;
+  padding: 15px 20px;
+  margin-top: 1rem;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+.favoritos{
+  text-align: center;
   
-  .favorito-btn i {
-    margin-right: 5px;
-  }
-  
-.favs{
-    margin-top: 1rem;
-    font-size: 24px;
-    color: #020202;
+}
+
+#favoritos-texto{
+  color: #f1f1f1;
+  font-size: 20px;
+
+}
+
+.information{
+  display: grid;
+  justify-content: center;
+  font-size: 20px;
+  color: #020202;
+}
+
+.poster-container{
+    text-align: center;
+}
+
+.serie-info{
+  font-size: 24px;
+  color: #020202;
+  text-align: center;
+}
+.seasons {
+  display: grid;
+  justify-content: center;
+  font-size: 20px;
+  color: #020202;
+}
+
+.seasons div {
+  cursor: pointer;
+  margin-bottom: 1rem;
+}
+
+.episodes {
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+  padding: 0;
+  transition: opacity 0.5s ease-out, max-height 0.5s ease-out, padding 0.5s ease-out;
+}
+
+.episodes.visible {
+  opacity: 1;
+  max-height: 400px; /* Set a reasonable maximum height */
+  padding: 1rem 0;
 }
