--- a/my-app/public/style.css
+++ b/my-app/public/style.css
@@ -39,7 +39,7 @@ a{
     font-size: 1.5rem;
     text-align: center;
     align-items: center;
-    margin: 1rem 0 -5rem 0;
+    margin: 1rem 0 0;
     color: rgb(227, 224, 224);
 }
 
@@ -108,6 +108,7 @@ a{
     border: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-top: auto; /* Ensure the button is pushed to the bottom */
   }
   
   .btn-detalles:hover {
@@ -229,7 +230,21 @@ a{
     color: #f1f1f1;
 }
 
-.nada{
-  background-color: #000000;
-  padding: 0.1rem;
+.text-center {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding: 10px;
+  box-sizing: border-box;
 }
+
+.text-center h5{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  font-size: larger;
+  text-align: center;
+}
+
